# bazel-ide-test

./: .bazelrc  .gitignore  LICENSE  README.md  WORKSPACE  tulsi-workspace
core/: BUILD.bazel
core/bar/: BUILD.bazel
core/foo/: BUILD.bazel  foo.cpp  foo.hpp
demo/android-java/: AndroidManifest.xml  BUILD.bazel  android_repositories.bzl
demo/android-java/java/co/ffreling/bazelide/demo/: MainActivity.java  MainApplication.java
demo/android-java/res/layout/: activity_main.xml
demo/android-java/res/values/: strings.xml  styles.xml
demo/ios/: AppDelegate.swift  BUILD.bazel  Info.plist  ViewController.swift
demo/ios-objc/: BUILD.bazel  ViewController.mm
demo/ios-objc/BazelIDE.tulsiproj/: project.tulsiconf
demo/ios-objc/BazelIDE.tulsiproj/Configs/: MainConfig.tulsigen
demo/ios-objc/Resources/Storyboards/: Main.storyboard
demo/ios-swift/: BUILD.bazel  bazelide.mobileprovision
demo/ios-swift/BazelIDE.tulsiproj/: project.tulsiconf
demo/ios-swift/BazelIDE.tulsiproj/Configs/: MainConfig.tulsigen
demo/ios/Resources/Storyboards/: Main.storyboard
ide/BazelTulsiConfig.tulsiproj/: project.tulsiconf
ide/BazelTulsiConfig.tulsiproj/Configs/: BazelSwift.tulsigen  MainTulsiConfig.tulsigen
ide/BazelXcodeObjC.tulsiproj/: project.tulsiconf
ide/BazelXcodeObjC.tulsiproj/Configs/: BazelObjC.tulsigen
sdk/android/: AndroidManifest.xml  BUILD.bazel
sdk/android/java/co/ffreling/bazel-ide-test/sdk/: CustomController.java  CustomView.java
sdk/android/java/co/ffreling/bazelide/: CustomView.java
sdk/android/jni/: core_jni.cpp
sdk/ios/: BUILD.bazel  CustomView.h  CustomView.mm
